Compar:
Simplify DriverData.
Fix default field config file creation, and update resource files.
Fix crash from sample ID not being present in truthset.
Fix handling of data loading errors in SomaticVariantComparer,
preventing crashes.
Make isPass in VariantData account for loading non-Pass variants
from Purple VCFs.
Fix typos and clean up unused code.